# rocket-jwt

./: .env.postgres.example  .env.sqlite  .gitignore  .travis.yml  Cargo.toml  README.md  config.yml
.github/workflows/: ci.yml
migrations/2021-06-22-041426_create-users/: up.sql
src/: create_user.rs  error.rs  lib.rs  main.rs
src/backends/: mod.rs  user.rs
src/db/: mod.rs  model.rs  schema.rs
src/secure/: mod.rs  tokenizer.rs
src/server/: catchers.rs  config.rs  mod.rs
src/server/controllers/: mod.rs  user.rs
src/server/guards/: jwt.rs
