[package]
name = "rocketjwt"
version = "0.2.1"
authors = ["Marirs <marirs@gmail.com>"]
description = "Barebones Rocket API Server with JWT auth"
keywords = ["rocket", "api", "jwt"]
edition = "2021"

[dependencies]
clap = { version = "4", features = ["cargo", "derive"] }
config = "0.14.0"
diesel = { version = "2.1.6", optional = true }
jwt-simple = "0.12.9"
okapi = { version = "0.7", features = ["impl_json_schema"] }
openssl = { version = "0.10", features = ["vendored"] }
parse_duration = "2.1.1"
r2d2 = "0.8"
rocket = { version = "0.5", features = ["json", "secrets", "tls"] }
rocket_okapi = { version="0.8.0-rc.3" , features = ["swagger"]}
rpassword = { version = "7.3", optional = true }
schemars = { version="0.8.21" , features = ["impl_json_schema"]}
sha2 = "0.10.8"
serde = { version = "1.0.136", features = ["derive"] }
thiserror = "1.0.30"
libsqlite3-sys = { version = ">=0.17.2, <0.29.0", optional = true, features = ["min_sqlite_version_3_14_0"] }

[features]
default = ["sqlite"]
postgres = ["diesel/postgres", "diesel/r2d2"]
sqlite = ["diesel/sqlite", "diesel/r2d2", "libsqlite3-sys/bundled"]
create-user-binary = ["rpassword"]

[[bin]]
name = "rocketjwt"
path = "src/main.rs"

[[bin]]
name = "create-user"
path = "src/create_user.rs"
required-features = ["create-user-binary"]
doc = false

[profile.release]
codegen-units = 1
debug-assertions = false
debug = false
opt-level = 3
lto = true
